# summer-practice-1

./: Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  durak  durak.cpp  durak.h  func.cpp  gameMenu.cpp  gameMenu.h  main.cpp  menupik.cpp  menupik.h  pikdam.cpp  pikdam.h
